--- a/airbyte-integrations/connectors/source-applovin-max/source_applovin_max/spec.yaml
+++ b/airbyte-integrations/connectors/source-applovin-max/source_applovin_max/spec.yaml
@@ -12,6 +12,7 @@ connectionSpecification:
       description: Your API Report Key, for ex, Hyfi8Mkct…WiWP466a1VBL7eUfUlD9JBh
       order: 0
       type: string
+      airbyte_secret: true
     start_date: 
       title: Start Date
       description: The start date in the format YYYY-MM-DD
