complete applovin max

--- a/airbyte-integrations/connectors/source-applovin-max/source_applovin_max/spec.yaml
+++ b/airbyte-integrations/connectors/source-applovin-max/source_applovin_max/spec.yaml
@@ -58,7 +58,7 @@ connectionSpecification:
       title: Number of days backward to get data
       type: string
       order: 4
-      description: In case data from MAX change
+      description: In case data from MAX change, default is 7 days
 
 
 
