--- a/airbyte-integrations/connectors/source-google-admobs/sample_files/configured_catalog.json
+++ b/airbyte-integrations/connectors/source-google-admobs/sample_files/configured_catalog.json
@@ -2,7 +2,7 @@
     "streams": [
       {
         "stream": {
-          "name": "a_list_apps",
+          "name": "CustomMP~4390171533",
           "json_schema": {},
           "supported_sync_modes": ["full_refresh"]
         },
@@ -15,8 +15,8 @@
           "json_schema": {},
           "supported_sync_modes": ["full_refresh", "incremental"]
         },
-        "sync_mode": "incremental",
-        "destination_sync_mode": "append"
+        "sync_mode": "full_refresh",
+        "destination_sync_mode": "overwrite"
       }
     ]
   }
