adjust backward day for apple store source

--- a/airbyte-integrations/connectors/source-apple-store-custom/source_apple_store_custom/spec.yaml
+++ b/airbyte-integrations/connectors/source-apple-store-custom/source_apple_store_custom/spec.yaml
@@ -40,4 +40,9 @@ connectionSpecification:
       type: string
       order: 4
       format: date
+    number_days_backward:
+      title: Number of days backward to get data
+      type: string
+      order: 6
+      description: In case data from Apple change, default is 7 days
 
