--- a/airbyte-integrations/connectors/source-iron-source-mediation/source_iron_source_mediation/spec.yaml
+++ b/airbyte-integrations/connectors/source-iron-source-mediation/source_iron_source_mediation/spec.yaml
@@ -4,9 +4,34 @@ connectionSpecification:
   title: Iron Source Mediation Spec
   type: object
   required:
-    - TODO
+    - secret_key
+    - refresh_token
+    - start_date
   properties:
-    # 'TODO: This schema defines the configuration required for the source. This usually involves metadata such as database and/or authentication information.':
-    TODO:
+    secret_key:
+      title: Secret Key
       type: string
-      description: describe me
+      order: 1
+      description: Secret key under Account/ API Tab. See <a href="https://developers.is.com/ironsource-mobile/air/authentication/#step-1">here</a>
+      airbyte_secret: true
+    refresh_token:
+      title: Refresh Token
+      type: string
+      order: 2
+      description: Refresh token under Account/ API Tab. See <a href="https://developers.is.com/ironsource-mobile/air/authentication/#step-1">here</a>
+      airbyte_secret: true
+    start_date:
+      title: Start Date
+      type: string
+      order: 3
+      description: UTC date in format 2023-01-01.
+      pattern: '^[0-9]{4}-[0-9]{2}-[0-9]{2}$'
+      pattern_descriptor: "YYYY-MM-DD"
+      format: date
+    number_days_backward:
+      title: Number of days backward to get data
+      type: integer
+      order: 4
+      description: Number of days backward to get data for daily incremental sync, default is 7
+
+
