--- a/airbyte-integrations/connectors/source-applovin-max/source_applovin_max/spec.yaml
+++ b/airbyte-integrations/connectors/source-applovin-max/source_applovin_max/spec.yaml
@@ -56,9 +56,11 @@ connectionSpecification:
           - estimated_revenue
     number_days_backward:
       title: Number of days backward to get data
-      type: string
+      type: integer
       order: 4
-      description: In case data from MAX change, default is 7 days
+      description: In case data from MAX change, default is 7 days. Maximum is 45 days
+      minimum: 1
+      maximum: 45
     time_zone:
       title: Your local timezone
       type: string
