--- a/airbyte-integrations/connectors/source-google-admobs/source_google_admobs/spec.yaml
+++ b/airbyte-integrations/connectors/source-google-admobs/source_google_admobs/spec.yaml
@@ -85,48 +85,16 @@ connectionSpecification:
           - IMPRESSION_RPM
     number_days_backward:
       title: Number of days backward to get data
-      type: string
+      type: integer
       order: 8
       description: Due to Admob adjust data in the past, usually after 7 days it will stop changing so default is 7 days
+      minimum: 1
+      default: 7
     time_zone:
       title: Your local timezone
       type: string
       order: 9
       description: Default is UTC, get timezone name in https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-advanced_auth:
-  auth_flow_type: oauth2.0
-  predicate_key:
-    - auth_type
-  predicate_value: oauth2.0
-  oauth_config_specification:
-    complete_oauth_output_specification:
-      type: object
-      additionalProperties: true
-      properties:
-        refresh_token:
-          type: string
-          path_in_connector_config:
-            - refresh_token
-    complete_oauth_server_input_specification:
-      type: object
-      additionalProperties: true
-      properties:
-        client_id:
-          type: string
-        client_secret:
-          type: string
-    complete_oauth_server_output_specification:
-      type: object
-      additionalProperties: true
-      properties:
-        client_id:
-          type: string
-          path_in_connector_config:
-            - client_id
-        client_secret:
-          type: string
-          path_in_connector_config:
-            - client_secret
 
 
 
