--- a/airbyte-integrations/connectors/source-apple-store-custom/source_apple_store_custom/spec.yaml
+++ b/airbyte-integrations/connectors/source-apple-store-custom/source_apple_store_custom/spec.yaml
@@ -36,7 +36,7 @@ connectionSpecification:
       type: string
     start_date: 
       title: Start Date
-      description: The date start getting report
+      description: The date start getting report, maximun is one year before your start_date
       type: string
       order: 4
       format: date
