--- a/airbyte-integrations/connectors/source-iron-source-advertise/source_iron_source_advertise/spec.yaml
+++ b/airbyte-integrations/connectors/source-iron-source-advertise/source_iron_source_advertise/spec.yaml
@@ -32,4 +32,10 @@ connectionSpecification:
       title: Number of days backward to get data
       type: integer
       order: 4
-      description: Number of days backward to get data for daily incremental sync, default is 7
+      description: Number of days backward to get data for daily incremental sync, default is 7. If you choose Get Last X Days is False, then all incremental streams will get data from date of last sync minus number of days backward.
+    get_last_X_days:
+      title: Get last X days data
+      type: boolean
+      order: 5
+      description: Important** This fuction ignores your Start Date and only Get last X days data for both full-refresh and incremental method, X = Number of days backward. For example, if you fill 7 in Number of days backwards, and choose this option as True, all streams will record last 7 days data from today (UTC Time). 
+      default: false
