--- a/airbyte-integrations/connectors/source-mintegral-ads/source_mintegral_ads/spec.yaml
+++ b/airbyte-integrations/connectors/source-mintegral-ads/source_mintegral_ads/spec.yaml
@@ -7,6 +7,7 @@ connectionSpecification:
     - api_key
     - access_key
     - start_date
+    - utc_offset
   properties:
     api_key:
       title: API Key
@@ -26,22 +27,29 @@ connectionSpecification:
       order: 2
       type: string
       format: date
-    number_days_backward:
-      title: Number of days backward to get data
-      type: integer
-      order: 3
-      description: In case data change, default is 7 days. Maximum is 7 days
-      default: 7
-      minimum: 1
-      maximum: 7
-    timezone:
-      title: Your local timezone
-      type: string
-      order: 4
-      description: Default is UTC, See <a href="https://en.wikipedia.org/wiki/List_of_tz_database_time_zones">here</a>
     utc_offset:
       title: UTC offset
       type: integer
-      order: 5
+      order: 3
       description: This info will be used in request params, Default is 0, See <a href="https://adv-new.mintegral.com/doc/en/report/performanceReport">here</a>. You can get your standard time offset in <a href="https://en.wikipedia.org/wiki/List_of_tz_database_time_zones">here</a>
       default: 0
+    number_days_backward:
+      title: Number of days backward to get data
+      type: integer
+      order: 4
+      description: Number of days backward to get data for daily incremental sync, default is 7. If you choose Get Last X Days is False, then all incremental streams will get data from date of last sync minus number of days backward.
+      default: 7
+      minimum: 1
+      maximum: 7
+    get_last_X_days:
+      title: Get last X days data
+      type: boolean
+      order: 5
+      description: Important** This fuction ignores your Start Date and only Get last X days data for both full-refresh and incremental method, X = Number of days backward. For example, if you fill 7 in Number of days backwards, and choose this option as True, all streams will record last 7 days data from today (UTC Time). 
+      default: false
+    timezone:
+      title: Your local timezone
+      type: string
+      order: 6
+      description: Default is UTC, See <a href="https://en.wikipedia.org/wiki/List_of_tz_database_time_zones">here</a>
+    
