--- a/airbyte-integrations/connectors/source-applovin-max/source_applovin_max/spec.yaml
+++ b/airbyte-integrations/connectors/source-applovin-max/source_applovin_max/spec.yaml
@@ -42,7 +42,7 @@ connectionSpecification:
           - network_placement
     custom_report_metrics:
       title: Custom Reports Metrics
-      description: Pick iteams in list, https://dash.applovin.com/documentation/mediation/reporting-api/max-ad-revenue
+      description: Pick iteams in list, See <a href="https://dash.applovin.com/documentation/mediation/reporting-api/max-ad-revenue">here</a> 
       order: 3
       type: array
       minItems: 0
@@ -58,14 +58,20 @@ connectionSpecification:
       title: Number of days backward to get data
       type: integer
       order: 4
-      description: In case data from MAX change, default is 7 days. Maximum is 45 days
+      description: Number of days backward to get data for daily incremental sync, default is 7. If you choose Get Last X Days is False, then all incremental streams will get data from date of last sync minus number of days backward.
       minimum: 1
       maximum: 45
-    time_zone:
+    get_last_X_days:
+      title: Get last X days data
+      type: boolean
+      order: 5
+      description: Important** This fuction ignores your Start Date and only Get last X days data for both full-refresh and incremental method, X = Number of days backward. For example, if you fill 7 in Number of days backwards, and choose this option as True, all streams will record last 7 days data from today (UTC Time). 
+      default: false
+    timezone:
       title: Your local timezone
       type: string
-      order: 5
-      description: Default is UTC, get timezone name in https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+      order: 6
+      description: Default is UTC, get timezone name in <a href="https://en.wikipedia.org/wiki/List_of_tz_database_time_zones">here</a>
 
 
 
