--- a/airbyte-integrations/connectors/source-google-analytics-ga4-custom/source_google_analytics_ga4_custom/spec.yaml
+++ b/airbyte-integrations/connectors/source-google-analytics-ga4-custom/source_google_analytics_ga4_custom/spec.yaml
@@ -5,14 +5,13 @@ connectionSpecification:
   type: object
   required:
     - credentials
-    - property_list_as_dict
-    - start_date
-    - custom_reports
+    - list_properties_name_and_id_as_dict
+  additionalProperties: true
   properties:
     credentials:
       title: Credentials
-      type: object
       order: 1 
+      type: object
       oneOf:
         - title: Service Account Json
           type: object
@@ -28,23 +27,145 @@ connectionSpecification:
               type: string
               order: 1
               airbyte_secret: true
-    property_list_as_dict:
-      title: List Property Name and ID
-      description: in json format {....}, with key and value as "Property Name" and "Property ID" respectively
-      type: string
+              multiline: true
+    list_properties_name_and_id_as_dict:
+      title: List Properties Name and ID
+      description: List Properties Name and ID as key - value
       order: 2
-    start_date:
-      title: Start Date 
-      type: string
-      order: 3
-      description: in format YYYY-MM-DD
-    custom_reports:
-      title: Custom Reports
-      type: string
+      type: array
+      items:
+        type: object
+        required:
+          - property_name
+          - property_id
+        properties:
+          property_name:
+            title: Property Name
+            description: Name of the property
+            order: 1
+            type: string
+          property_id:
+            title: Property ID
+            description: ID of the property
+            order: 2
+            type: number
+            pattern: '^[0-9]{9}$'
+            pattern_descriptor: "9 digit number"
+    daily_reports:
+      title: Daily Reports
+      description: >- 
+        Dimensions and Metrics can be found in 
+        <a href="https://ga-dev-tools.google/ga4/dimensions-metrics-explorer/">Google's documentation</a>.". 
       order: 4
-      description: in json format {...}, with key as "dimensions" and "metrics", and value as look up this link - https://ga-dev-tools.web.app/dimensions-metrics-explorer/
+      type: array
+      items:
+        type: object
+        required:
+          - report_name
+          - metrics
+          - start_date
+        properties:
+          report_name:
+            title: Report Name
+            description: Name of the report
+            order: 0
+            type: string
+          dimensions:
+            title: Dimensions
+            description: List of dimensions. Default has date Dimensions
+            order: 1
+            type: array
+            items:
+              type: string
+          metrics:
+            title: Metrics
+            description: >- 
+              List of metrics. Metrics can be found in <a href="https://ga-dev-tools.google/ga4/dimensions-metrics-explorer/">Google's documentation</a>.".
+            order: 2
+            type: array
+            items:
+              type: string
+          start_date:
+            title: Start Date 
+            description: in format YYYY-MM-DD
+            order: 3
+            type: string
+            pattern: '^[0-9]{4}-[0-9]{2}-[0-9]{2}$'
+            pattern_descriptor: "YYYY-MM-DD"
+            format: date
+    daily_cohort_reports:
+      title: Daily Cohort Reports
+      description: >- 
+        Dimensions and Metrics can be found in 
+        <a href="https://ga-dev-tools.google/ga4/dimensions-metrics-explorer/">Google's documentation</a>.". 
+      order: 5
+      type: array
+      items:
+        type: object
+        required:
+          - report_name
+          - metrics
+          - start_date
+          - cohort_range
+        properties:
+          report_name:
+            title: Report Name
+            description: Name of the report
+            order: 0
+            type: string
+          dimensions:
+            title: Dimensions
+            description: List of dimensions. Default has cohort and cohortNthDay Dimensions
+            order: 1
+            type: array
+            items:
+              type: string
+          metrics:
+            title: Metrics
+            description: >- 
+              List of metrics. Metrics can be found in <a href="https://ga-dev-tools.google/ga4/dimensions-metrics-explorer/">Google's documentation</a>.".
+            order: 2
+            type: array
+            items:
+              type: string
+          start_date:
+            title: Start Date 
+            description: in format YYYY-MM-DD
+            order: 3
+            type: string
+            pattern: '^[0-9]{4}-[0-9]{2}-[0-9]{2}$'
+            pattern_descriptor: "YYYY-MM-DD"
+            format: date
+          cohort_range:
+            title: Cohort Range
+            description: >- 
+              Number of retention day, for example, D0, D1 to Dn. Fill in n if you want to get n day retention.
+            order: 4
+            type: number
+            default: 7
+            minimum: 1
     number_days_backward:
       title: Number of days backward to get data
+      description: >- 
+        Due to GA adjust data in the past, usually after 7 days it will stop changing so default is 7 days
+      order: 6
+      type: number
+      default: 7
+      minimum: 1
+    get_last_X_days:
+      title: Get last X days data
+      description: >- 
+        Important** This fuction ignores your Start Date and only Get last X days data for both full-refresh 
+        and incremental method, X = Number of days backward. 
+        For example, if you fill 7 in Number of days backwards, and choose this option as True, 
+        all streams will record last 7 days data from today (according to your timezone setting).
+      order: 7
+      type: boolean
+      default: false
+    timezone:
+      title: Your local timezone
+      description: >- 
+        Default is UTC, get timezone name in 
+        <a href="https://en.wikipedia.org/wiki/List_of_tz_database_time_zones">Wikipedia</a>
+      order: 7
       type: string
-      order: 5
-      description: Due to GA adjust data in the past, usually after 7 days it will stop changing so default is 7 days
