add Max Custom Report new Dimensions

--- a/airbyte-integrations/connectors/source-applovin-max/source_applovin_max/spec.yaml
+++ b/airbyte-integrations/connectors/source-applovin-max/source_applovin_max/spec.yaml
@@ -51,6 +51,7 @@ connectionSpecification:
         type: string
         enum:
           - attempts
+          - requests
           - responses
           - impressions
           - estimated_revenue
