--- a/airbyte-integrations/connectors/source-unity-ads-advertise/source_unity_ads_advertise/spec.yaml
+++ b/airbyte-integrations/connectors/source-unity-ads-advertise/source_unity_ads_advertise/spec.yaml
@@ -4,25 +4,33 @@ connectionSpecification:
   title: Unity Ads Advertise Spec
   type: object
   required:
-    - api_key
     - organization_id
+    - key_id
+    - secret_key
     - start_date
+  additionalProperties: true
   properties:
-    api_key:
-      title: API Key
-      type: string
-      order: 1
-      description: Secret key under Growth/ API Management Tab. See <a href="https://services.docs.unity.com/statistics/v1/index.html#section/Authentication">here</a>
-      airbyte_secret: true
     organization_id:
       title: Organization ID
       type: string
+      order: 1
+      description: See <a href="https://services.docs.unity.com/statistics/#section/Migrating-from-the-previous-version-of-the-API">here</a>
+    key_id:
+      title: Key ID
+      type: string
+      description: Key ID of service account. See <a href="https://services.docs.unity.com/statistics/#section/Migrating-from-the-previous-version-of-the-API">here</a>
+      airbyte_secret: true
       order: 2
-      description: Secret key under Growth/ Setting Tab. See <a href="https://services.docs.unity.com/statistics/v1/index.html#tag/Acquisitions/operation/stats_acquisition">here</a>
+    secret_key:
+      title: Secret Key
+      type: string
+      description: Secret Key of service account. See <a href="https://services.docs.unity.com/statistics/#section/Migrating-from-the-previous-version-of-the-API">here</a>
+      airbyte_secret: true
+      order: 3
     start_date:
       title: Start Date
       type: string
-      order: 3
+      order: 4
       description: UTC date in format 2023-01-01.
       pattern: '^[0-9]{4}-[0-9]{2}-[0-9]{2}$'
       pattern_descriptor: "YYYY-MM-DD"
@@ -30,7 +38,19 @@ connectionSpecification:
     number_days_backward:
       title: Number of days backward to get data
       type: integer
-      order: 4
+      order: 5
       description: Number of days backward to get data for daily incremental sync, default is 7
       minimum: 1
       default: 7
+    get_last_X_days:
+      title: Get last X days data for Unity Ads Report
+      type: boolean
+      description: Important** This fuction ignores your Start Date and only Get last X days data for both full-refresh and incremental method, X = Number of days backward. For example, if you fill 7 in Number of days backwards, and choose this option as True, all streams will record last 7 days data from today (UTC Time). 
+      default: false
+      order: 6
+    timezone:
+      title: Your local timezone
+      type: string
+      description: Default is UTC, get timezone name in <a href="https://en.wikipedia.org/wiki/List_of_tz_database_time_zones">here</a>
+      default: UTC
+      order: 7
