--- a/airbyte-integrations/connectors/source-google-admobs/source_google_admobs/spec.yaml
+++ b/airbyte-integrations/connectors/source-google-admobs/source_google_admobs/spec.yaml
@@ -56,6 +56,7 @@ connectionSpecification:
         type: string
         enum:
           - AD_SOURCE
+          - AD_SOURCE_INSTANCE
           - AD_UNIT
           - MEDIATION_GROUP
           - COUNTRY
