--- a/airbyte-integrations/connectors/source-mintegral-ads/source_mintegral_ads/spec.yaml
+++ b/airbyte-integrations/connectors/source-mintegral-ads/source_mintegral_ads/spec.yaml
@@ -33,10 +33,43 @@ connectionSpecification:
       order: 3
       description: This info will be used in request params, Default is 0, See <a href="https://adv-new.mintegral.com/doc/en/report/performanceReport">here</a>. You can get your standard time offset in <a href="https://en.wikipedia.org/wiki/List_of_tz_database_time_zones">here</a>
       default: 0
+    custom_report_dimensions:
+      title: Custom Reports Dimension
+      description: Pick items in list. See <a href="https://adv-new.mintegral.com/doc/en/guide/report/advancedPerformanceReport.html">here</a>.
+      type: array
+      order : 3
+      minItems: 0
+      uniqueItems: true
+      items:
+        type: string
+        enum:
+          - Offer
+          - Campaign
+          - CampaignPackage
+          - Creative
+          - AdType
+          - Sub
+          - Package
+          - Location
+          - Endcard
+          - AdOutputType
+    custom_report_time_granularity:
+      title: Custom Report Time Granularity
+      description: Pick 1 item in list. See <a href="https://adv-new.mintegral.com/doc/en/guide/report/advancedPerformanceReport.html">here</a>. Default is daily
+      type: array
+      order : 4
+      minItems: 0
+      maxItems: 1
+      uniqueItems: true
+      items:
+        type: string
+        enum:
+          - daily
+          - hourly
     number_days_backward:
       title: Number of days backward to get data
       type: integer
-      order: 4
+      order: 5
       description: Number of days backward to get data for daily incremental sync, default is 7. If you choose Get Last X Days is False, then all incremental streams will get data from date of last sync minus number of days backward.
       default: 7
       minimum: 1
@@ -44,12 +77,12 @@ connectionSpecification:
     get_last_X_days:
       title: Get last X days data
       type: boolean
-      order: 5
+      order: 6
       description: Important** This fuction ignores your Start Date and only Get last X days data for both full-refresh and incremental method, X = Number of days backward. For example, if you fill 7 in Number of days backwards, and choose this option as True, all streams will record last 7 days data from today (UTC Time). 
       default: false
     timezone:
       title: Your local timezone
       type: string
-      order: 6
+      order: 7
       description: Default is UTC, See <a href="https://en.wikipedia.org/wiki/List_of_tz_database_time_zones">here</a>
     
